--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,10 +1,17 @@
 :root {
   --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
   --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
-  font-family: "Playfair Display", serif;
+  font-family: var (--heading-font-family);
   font-weight: bold;
 }
 
@@ -21,6 +28,7 @@ p {
   font-size: 36px;
   font-weight: bold;
   margin: 0px;
+  color: #272142;
 }
 .hero h2 {
   font-family: "Poppins", sans-serif;
