--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -39,4 +39,8 @@ p {
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
