--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -4,6 +4,9 @@
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
+body {
+  font-family: var(--default-font-family);
+}
 h1,
 h2,
 h3,
@@ -30,8 +33,12 @@ p {
   margin: 0px;
   color: #272142;
 }
+.hero h1 {
+  font-size: 96px;
+  font-family: var(--heading-font-family);
+}
 .hero h2 {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   font-weight: normal;
   line-height: 2;
   font-size: 24px;
@@ -43,6 +50,7 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+  display: block;
 }
 .logo {
   padding: 165px 40px;
