--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -43,6 +43,12 @@ p {
   line-height: 2;
   font-size: 24px;
 }
+.btn {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
@@ -50,8 +56,7 @@ p {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
-  display: block;
 }
 .logo {
-  padding: 165px 40px;
+  padding: 165px 40px 0 0;
 }
