--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,62 +1,199 @@
 :root {
-  --branding-color: #6c63ff;
-  --secondary-color: #f9f7fe;
+  --primary-color: #6c63ff;
+  --button-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --secondary-color: #f5f2fe;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
 }
+
 body {
   font-family: var(--default-font-family);
+  padding: 10px;
+}
+.container {
+  max-width: 110%;
+  overflow: hidden;
 }
 h1,
 h2,
 h3,
-h4,
-h5,
-h6 {
-  color: black;
-  font-family: var (--heading-font-family);
+h4 {
+  font-family: var(--heading-font-family);
+  font-weight: 700;
+}
+h1 {
+  font-size: 96px;
+  line-height: 128px;
+}
+h2 {
+  font-size: 36px;
+  line-height: 54px;
+}
+h3 {
+  font-size: 24px;
+  line-height: 36px;
+}
+.hero {
+  text-align: center;
+  padding: 20px 0;
+  margin-bottom: 20px;
+  background-color: var(--secondary-color);
+}
+
+.about-section {
+  font-size: 18px;
   font-weight: bold;
+}
+.content-container {
+  padding: 120px 20px;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
-.hero {
-  background-color: #f9f7fe;
-  text-align: center;
-  padding: 160px 20px;
+
+.project-link {
+  margin: 0 20px;
 }
-.hero p {
-  font-size: 36px;
-  font-weight: bold;
-  margin: 0px;
-  color: #272142;
+.links {
+  display: flex;
+  justify-content: center;
 }
-.hero h1 {
-  font-size: 96px;
-  font-family: var(--heading-font-family);
-}
-.hero h2 {
-  font-family: var(--default-font-family);
-  font-weight: normal;
-  line-height: 2;
-  font-size: 24px;
-}
-.btn {
+.link-button {
   display: inline-block;
-  text-align: center;
+  color: #fff;
+  background-color: var(--primary-color);
+  font-size: 16px;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 10px;
+
+  box-shadow: var(--button-shadow);
   text-decoration: none;
-  cursor: pointer;
 }
-.btn-branding {
-  background: var(--branding-color);
-  border-radius: 4px;
-  color: white;
-  font-size: 18px;
-  line-height: 27px;
-  padding: 15px 30px;
+.link-button:hover {
+  color: var(--primary-color);
+  background-color: #fff;
+  border: 1px solid var(--primary-color);
+}
+.about {
+  display: flex;
+  justify-content: center;
+}
+.about-text {
+  margin: 20px;
+  padding: 10px;
+}
+.email-link {
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: var(--primary-color);
+  font-size: 28px;
+}
+.email-link:hover {
+  text-decoration: underline;
+}
+.subtytle {
+  opacity: 0.7;
+}
+
+.header-section {
+  font-size: 64px;
+}
+
+nav {
+  padding: 20px 0;
+}
+ul {
+  list-style-type: none;
+}
+nav li {
+  display: inline;
+}
+li a {
+  text-decoration: none;
+  color: #000;
+  transition: all 100ms ease-in-out;
+}
+li a:hover,
+.active {
+  color: var(--primary-color);
 }
 .logo {
-  padding: 10px 10px;
+  max-height: 60px;
+}
+.project-button {
+  font-size: 16px;
+  border-radius: 5px;
+  padding: 15px;
+  margin: 10px;
+  box-shadow: var(--button-shadow);
+  background-color: #fff;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  text-decoration: none;
+}
+.project-button:hover {
+  color: #fff;
+  background-color: var(--primary-color);
+}
+footer {
+  padding: 20px 0;
+}
+.contact-box {
+  background-color: var(--secondary-color);
+  padding: 20px 120px;
+}
+
+.email-link {
+  color: #000;
+  text-decoration: none;
+  font-size: 24px;
+}
+.email-link:hover {
+  display: block;
+  color: var(--primary-color);
+  text-decoration: none;
+}
+.social-links a {
+  font-size: 18px;
+  margin: 0 20px;
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  padding: 10px 15px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+.social-links a:hover {
+  color: #fff;
+  background-color: var(--primary-color);
+}
+.source-link {
+  font-size: 12px;
+}
+
+@media (max-width: 900px) {
+  .container {
+    padding: 0px;
+  }
+  .header-section {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h1 {
+    font-size: 44px;
+  }
+  h2 {
+    font-size: 36px;
+  }
+  .contact-box {
+    padding: 30px 60px;
+  }
+  nav ul {
+    padding-left: 1rem;
+    font-size: 15px;
+  }
 }
