--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,9 @@ body {
   font-family: var(--default-font-family);
   padding: 10px;
 }
+header {
+  font-family: var(--default-font-family);
+}
 .container {
   max-width: 110%;
   overflow: hidden;
